Added second method

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title></title>
   </head>
   <body>
+    <ul>
+      Pikes Place Market
+    </ul>
     <script src="app.js" charset="utf-8"></script>
 
     </script>
