first two methods working

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title></title>
   </head>
   <body>
-    <ul>
+    <ul id = "timeOfDay">
       Pikes Place Market
     </ul>
     <script src="app.js" charset="utf-8"></script>
