--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title></title>
   </head>
   <body>
-    <ul id = "timeOfDay">
-      Pikes Place Market
+    <ul id = "pikePlace">
+      Pike Place Market
     </ul>
     <script src="app.js" charset="utf-8"></script>
 
