--- a/style_sheet/index.html
+++ b/style_sheet/index.html
@@ -2,12 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    "<link rel="stylesheet" href="style.css">"
-    </style>"
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
     <title>
+      Style Guide
     </title>
   </head>
   <body>
+    <h1 id = "highlights">Highlights</h1>
 
   </body>
 </html>
