added palette colors

--- a/style_sheet/index.html
+++ b/style_sheet/index.html
@@ -1,15 +1,30 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
-    <title>
-      Style Guide
-    </title>
-  </head>
-  <body>
-    <h1 id = "highlights">Highlights</h1>
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
+  <title>
+    Style Guide
+  </title>
+</head>
+<body>
+  <h1 id = "highlights:">Highlights</h1>
+  <p>font-family: 'Inconsolata', monospace;</p>
+  <p>color: #191f1d</p>
+
+  <h2>Heading 2</h2>
+
+  <table>
+    <tr>
+      <td id = "primary">#AA3939</td>
+      <td id = "secondary">#25705A</td>
+      <td id = "third">#2D882D</td>
+      <td id = "forth">#191f1d</td>
+    </tr>
+  </table>
+
+
 
   </body>
-</html>
+  </html>
