Added header 2 style

--- a/style_sheet/index.html
+++ b/style_sheet/index.html
@@ -13,7 +13,9 @@
   <p>font-family: 'Inconsolata', monospace;</p>
   <p>color: #191f1d</p>
 
-  <h2>Heading 2</h2>
+  <h2 id = "head1">Header 2</h2>
+  <p>font-family: Helvetica, sans-serif</p>
+  <p>color: #25705A</p>
 
   <table>
     <tr>
