Finished color guide

--- a/style_sheet/index.html
+++ b/style_sheet/index.html
@@ -12,10 +12,21 @@
   <h1 id = "highlights:">Highlights</h1>
   <p>font-family: 'Inconsolata', monospace;</p>
   <p>color: #191f1d</p>
+  <p>This will be used for titles</p>
 
-  <h2 id = "head1">Header 2</h2>
+  <h2 id = "head2">Header 2</h2>
   <p>font-family: Helvetica, sans-serif</p>
   <p>color: #25705A</p>
+  <p>This will be used for data.</p>
+
+  <h3 id = "head3">Header 3</h3>
+  <p>font-family: Georgia, serif</p>
+  <p>color: #25705A</p>
+  <p>These will be used for general text.</p>
+
+
+  <h1>Color Palette</h1>
+  <p>Offcial colors for the salmon cookies company</p>
 
   <table>
     <tr>
